Make the menu scroll if it overflows

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -25,7 +25,8 @@ p code, li code
   background rgba(0, 0, 0, 0.1)
 
 nav
-  width 240px
+  width 250px
+  overflow-y auto
   position fixed
   top 0
   background #ddd
