Update the development section for open source

--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -25,7 +25,7 @@ html
             option(value=languageCode,selected=isLanguageActive)= language
     main
       header
-        a(href="https://sparklinlabs.com/")
+        a(href="http://superpowers-html5.com/")
           img(src="/images/icon.png")
           span Make games with Superpowers &mdash; The extensible, collaborative HTML5 2D+3D game maker
 
